[package]
name = "bestls"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
chrono = "0.4.42"
clap = { version = "4.6.0", features = ["derive"] }
colored = "2.1"
strum = { version = "0.28", features = ["derive"] }
strum_macros = "0.28"
tabled = "0.20.0"